# hat-orchestrator

./: .buildinfo  .gitignore  CNAME  README.rst  index.html  objects.inv  orchestrator.html  package-lock.json  package.json  pyproject.toml  requirements.pip.dev.txt  requirements.pip.runtime.txt  requirements.pip.txt  search.html  searchindex.js  tsconfig.json
.doctrees/: environment.pickle  index.doctree  orchestrator.doctree
.github/workflows/: docs.yaml  main.yaml
_sources/: index.rst.txt
docs/: conf.py  orchestrator.rst
pending/test_sys/: test_orchestrator.py
playground/: env.sh  orchestrator.sh
py_api/: index.html  search.js
py_api/hat/: orchestrator.html
py_api/hat/orchestrator/: __main__.html  component.html  main.html  process.html  ui.html
schemas_json/: juggler.yaml  orchestrator.yaml
src_doit/: __init__.py
src_js/: main.js  main.ts
src_py/hat/orchestrator/: component.py  main.py  process.py  ui.py
src_scss/: main.scss
src_static/: index.html
src_static/style/: color.css  main.css
test_pytest/: test_process.py  test_ui.py
test_pytest/test_sys/: test_orchestrator.py
test_pytest/test_unit/: test_component.py  test_process.py  test_ui.py  test_ui_backend.py
